<resources>
    <string name="app_name">AISkin</string>

    <!-- String for Nvigation Bottom -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- String for activity intro -->
    <string name="text_intro">Ever wondered where you can find\nout about your skin disease without\ngoing to the doctor?</string>
    <string name="text_intro_2">Our AI-powered app will analyze your\nskin condition from a photo with\nprecision and speed.</string>
    <string name="text_intro_3">Get instant results and actionable\nrecommendations to keep your skin\nhealthy and happy!</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="skip_intro">Skip</string>

    <!-- String for activity auth -->
    <string name="sign_in"><u>Sign in</u></string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="cancel_update">Cancel Update Personal Info</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_title_1">Login</string>
    <string name="login_title_2">to your account</string>
    <string name="register_title_1">Create</string>
    <string name="register_title_2">new account</string>
    <string name="desc_background">background</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="desc_image_intro">Image Intro</string>
    <string name="skip">Skip</string>

    <!-- item disease -->
    <string name="text_title_item_disease">Example Disease</string>
    <string name="text_description_item_disease">Example Description Lorem Ipsum</string>

    <!-- item article -->
    <string name="text_title_item_article">Example Article</string>
    <string name="text_description_item_article">Example Article Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida iaculis risus, at faucibus ex mollis et. Ut et augue venenatis erat pretium molestie.</string>
    <string name="text_created_at_item_article">Wednesday, 24 November 2024</string>

    <!-- TODO kalo masih ada yang nyatu dipisah ya mar -->
    <!-- Hero Fragment-->
    <string name="text_hero_home">Hello %1$s, Don’t Forget to check your skin health</string>
    <string name="hero_image_home_description">Hero Image</string>
    <string name="text_check_skin">Check Your Skin Now\n</string>
    <string name="text_disease">Skin Disease</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_articles">New Articles</string>
    <string name="title_article">Article</string>
    <string name="title_account">Account</string>
    <string name="text_find_article">Find Article...</string>
    <string name="description_back_button">Back</string>
    <string name="description_user_image">Profile Picture</string>
    <string name="text_user_name">Von Lycaon</string>
    <string name="text_update_personal_info">Update Personal Info</string>
    <string name="text_total_liked_article">0</string>
    <string name="text_liked_article">Liked Articles</string>
    <string name="text_total_diagnosed_history">0</string>
    <string name="text_diagnosed_history">Diagnosed History</string>
    <string name="text_article_title">Kalau gatal sebaiknya jangan digaruk, lalu apa solusinya?</string>
    <string name="text_article_created_at">Thursday, 12 November 2024</string>
    <string name="text_article_content"><![CDATA[Jakarta (ANTARA) - Pakar dermatologi dan venereologi dr. Amelia Setiawati Soebyanto, Sp.DV, merekomendasikan orang-orang mengompres air dingin kulit yang gatal ketimbang menggaruknya.\n \n\"Kita bisa kompres atau masukkan air dingin ke botol kaca kemudian digulung-gulungkan (ke kulit yang gatal). Itu akan mengurangi gatal karena gatal akan tercampurnsama rasa dingin,\" kata Amelia di Jakarta, Rabu, (22/11/2023).\n \nKemudian, mengenai pendapat sebagian orang bahwa mandi air panas bisa mengatasi gatal, Amelia menuturkan cara itu justru akan menambah rasa gatal.\n \n\"Banyak yang bilang mandi air panas, langsung hilang gatalnya. Ya, bisa juga. Tapi, setelah itu lecet kulitnya. Setelahnya rasanya lebih gatal karena kulitnya lecet,\" tutur dia.  \nKulit gatal merupakan sensasi tidak nyaman pada kulit, polusi dikatakan memainkan peran penting dalam mengakibatkan kulit gatal.\n \nPolusi dapat masuk ke kulit melalui penumpukan partikel polusi di permukaan kulit dan diserap oleh folikel rambut dan kelenjar keringat. Beberapa di antaranya akan bersirkulasi dalam plasma yang kemudian masuk ke lapisan kulit yang lebih dalam.  Lalu, polusi yang masuk ini kemudian menghasilkan radikal bebas yang akan menurunkan kemampuan antioksidan kulit baik secara enzimatik maupun non-enzimatik (vitamin E, vitamin C dan glutation). Lapisan luar kulit yang rusak ini kemudian menyebabkan hilangnya air dalam jumlah banyak pada kulit. Akibatnya, kulit akan relatif lebih kering, mudah mengalami peradangan dan menimbulkan keluhan gatal.]]></string>
    <string name="text_other_prediction">Other Prediction</string>
    <string name="text_result">Scabies Kutu Kupret</string>
    <string name="text_result_probability">96% Probabilty</string>
    <string name="floating_like_button">floating like button</string>

    <!--    String for analyze  -->
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="text_loading_description">Deskripsi sedang dimuat...</string>
    <string name="text_result_probability_placeholder">Probabilitas: %s</string>
    <string name="text_prediction_placeholder">%1$s - %2$s</string>
    <string name="text_no_other_predictions">Tidak ada prediksi lainnya.</string>

    <string name="any_content">Jakarta (ANTARA) - Pakar dermatologi dan venereologi dr. Amelia Setiawati Soebyanto, Sp. DV, merekomendasikan orang-orang mengompres air dingin kulit yang gatal ketimbang menggaruknya.   "Kita bisa kompres atau masukkan air dingin ke botol kaca kemudian digulung-gulungkan (ke kulit yang gatal). Itu akan mengurangi gatal karena gatal akan tercampurnsama rasa dingin," kata Amelia di Jakarta, Rabu, (22/ 11/ 2023).</string>

    <!-- String for activity preview -->
    <string name="pilih_ulang">Pilih Ulang</string>
    <string name="ambil_ulang">Ambil Ulang</string>
    <string name="analyze">Analyze</string>


    <!-- String for activity disease -->
    <string name="text_title_treatment_recommendation">Treatment Recommendation</string>

    <!-- String for activity account -->
    <string name="logout">Logout</string>
    <string name="text_no_data_found">Data tidak ada atau cocok</string>
    <string name="text_title_medicine_recommendation">Medicine Recommendation</string>
    <string name="text_no_recommendation">Tidak ada rekomendasi</string>
    <string name="update">Update</string>
    <string name="personal_info">Personal Info</string>

</resources>