<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.detail_article.DetailArticleActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_article_title"
                style="@style/SemiBoldBlack20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_article_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularGrey10sp"
                android:layout_marginTop="8sp"
                android:text="@string/text_article_created_at"
                app:layout_constraintTop_toBottomOf="@id/text_article_title"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/image_article"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="16dp"
                android:clipToOutline="true"
                android:background="@drawable/rounded_image_item_news_hero"
                tools:src="@tools:sample/avatars"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/text_article_created_at"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_article_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularPoppins12sp"
                android:text="@string/text_article_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_article"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_floating_button"
        android:src="@drawable/ic_love_white"
        android:contentDescription="@string/floating_like_button"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
